--- a/one_shot_better_triplets.ipynb
+++ b/one_shot_better_triplets.ipynb
@@ -49,7 +49,7 @@
     "from PIL import Image\n",
     "from src.utils.triplet_loss import BatchAllTtripletLoss\n",
     "from tqdm.notebook import tqdm\n",
-    "from src.utils.celeba_helper import CelebADataset, CelebAClassifier, save_file_names, CelebADatasetTriplet\n",
+    "from src.utils.celeba_helper import CelebADataset, CelebAClassifier, CelebADatasetTriplet, get_embeddings_and_file_names\n",
     "from src.utils.loss_functions import TripletLoss\n",
     "from src.utils.similarity_functions import euclidean_distance_matrix\n",
     "from importlib import reload\n",
@@ -104,39 +104,6 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_train_files_for_max_img_per_person(file_label_mapping, max_img_pp):\n",
-    "    '''\n",
-    "    Returns a list of file names for the training set with at most max_img_pp images per person.\n",
-    "    '''\n",
-    "    flm = pd.DataFrame.copy(file_label_mapping)\n",
-    "    flm = flm.sort_values(['person_id', 'file_name'])\n",
-    "    flm['cumcount'] = flm.groupby('person_id').cumcount()\n",
-    "    flm_img_pp = flm[flm['cumcount'] < max_img_pp]\n",
-    "    return flm_img_pp['file_name'].values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create training and testing dataframes\n",
-    "max_img_pp = 2\n",
-    "\n",
-    "file_label_mapping = pd.read_csv(\n",
-    "    mapping_file, header=None, sep=\" \", names=[\"file_name\", \"person_id\", \"is_train\"]\n",
-    ")\n",
-    "\n",
-    "train_files = get_train_files_for_max_img_per_person(file_label_mapping=file_label_mapping, max_img_pp=max_img_pp)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -147,41 +114,93 @@
     }
    ],
    "source": [
-    "# Select only those people for train_files which have exactly two images (i.e. discard all those with only one)\n",
     "train_img_pp = 2\n",
     "\n",
-    "flm = pd.DataFrame.copy(file_label_mapping)\n",
-    "flm['count'] = flm.groupby('person_id')['person_id'].transform('size') # Add column with number of occurences of each person\n",
-    "flm = flm[flm['count'] >= train_img_pp] # Need to have at least 2 images for a person (2 go into train set)\n",
-    "flm = flm.sort_values(['person_id', 'file_name']) # Sort\n",
-    "flm['cumcount'] = flm.groupby('person_id').cumcount() # Add column with cumulative count\n",
-    "flm = flm[flm['cumcount'] < max_img_pp] # Filter the first two images of each person for train set\n",
-    "train_files = flm['file_name'].values\n",
-    "\n",
-    "print(f\"TRAIN SET: There are {len(train_files)} images in the training data of {len(np.unique(flm['person_id']))} people.\")"
+    "train_files, train_labels = celeba_dataset.create_X_shot_dataset(img_pp=2)\n",
+    "print(f\"TRAIN SET: There are {len(train_files)} images in the training data of {len(np.unique(train_labels))} people.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_13908/3404428383.py:1: FutureWarning: In a future version, `df.iloc[:, i] = newvals` will attempt to set the values inplace instead of always setting a new array. To retain the old behavior, use either `df[df.columns[i]] = newvals` or, if columns are non-unique, `df.isetitem(i, newvals)`\n",
-      "  file_label_mapping.loc[:, 'is_train'] = 0\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>file_name</th>\n",
+       "      <th>person_id</th>\n",
+       "      <th>is_train</th>\n",
+       "      <th>file_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>000001.jpg</td>\n",
+       "      <td>2880</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>000002.jpg</td>\n",
+       "      <td>2937</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>000003.jpg</td>\n",
+       "      <td>8692</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    file_name  person_id  is_train  file_id\n",
+       "0  000001.jpg       2880         1        0\n",
+       "1  000002.jpg       2937         1        1\n",
+       "2  000003.jpg       8692         1        2"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "file_label_mapping.loc[:, 'is_train'] = 0\n",
-    "file_label_mapping.loc[file_label_mapping['file_name'].isin(train_files), 'is_train'] = 1\n",
-    "file_label_mapping['file_id'] = [int(elem[:6])-1 for elem in file_label_mapping['file_name'].values]\n",
+    "flm = celeba_dataset.file_label_mapping\n",
     "\n",
-    "train_df = file_label_mapping[file_label_mapping['is_train']==1]\n",
-    "test_df = file_label_mapping[file_label_mapping['is_train']==0]"
+    "flm.loc[:, 'is_train'] = 0\n",
+    "flm.loc[flm['file_name'].isin(train_files), 'is_train'] = 1\n",
+    "flm['file_id'] = [int(elem[:6])-1 for elem in flm['file_name'].values]\n",
+    "\n",
+    "train_df = flm[flm['is_train']==1]\n",
+    "test_df = flm[flm['is_train']==0]\n",
+    "\n",
+    "train_df.head(3)"
    ]
   },
   {
@@ -193,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,46 +353,6 @@
     "optimizer = optim.Adam(filter(lambda p: p.requires_grad, resnet.parameters()), lr=lr)\n",
     "criterion = BatchAllTtripletLoss()\n",
     "scheduler = torch.optim.lr_scheduler.MultiStepLR(optimizer, milestones=schedule, gamma=gamma)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def find_positive_observations(X, y, df, sample=False, num_examples=5):\n",
-    "    \"\"\"Find the positive observations in the supplied dataset for each observation in X \n",
-    "    and adds features and labels to X and y, respectively.\n",
-    "\n",
-    "    Args:\n",
-    "        X (tensor): Features of images. Shape: [batch_size, channels, width, height]\n",
-    "        y (tensor): Labels: Shape: [batch_size]\n",
-    "        df (pd.DataFrame): Dataframe that contains mapping of file IDs and labels ('person_id')\n",
-    "\n",
-    "    Returns:\n",
-    "        (tensor, tensor): _description_\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    pos_obs_idx = np.array([], dtype=int)\n",
-    "    for anchor in np.unique(y):\n",
-    "        # get file_ids of all positive examples for anchor \n",
-    "        # positive examples in dataframe\n",
-    "        pos_examples = df[df['person_id']==int(anchor)]['file_id'].values        \n",
-    "        \n",
-    "        if sample and len(pos_examples)!=0:\n",
-    "            pos_examples = np.random.choice(pos_examples, size=num_examples)\n",
-    "        \n",
-    "        pos_obs_idx = np.hstack([pos_obs_idx, pos_examples])\n",
-    "\n",
-    "    for pos_obs in pos_obs_idx:\n",
-    "        # get image and label of positive example\n",
-    "        pos_img, pos_label = celeba_dataset[pos_obs]\n",
-    "        # add to batch\n",
-    "        X = torch.cat((X, torch.unsqueeze(pos_img, 0)), dim=0)\n",
-    "        y = torch.cat((y, torch.tensor([pos_label])), dim=0)\n",
-    "\n",
-    "    return X, y"
    ]
   },
   {
@@ -385,12 +364,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "def train_step(X, y, train_df):\n",
-    "    X, y = find_positive_observations(X, y, train_df)\n",
+    "    X, y = celeba_dataset.find_positive_observations(X, y, train_df)\n",
     "        \n",
     "    # Create embeddings\n",
     "    X_emb = resnet(X.to(device))\n",
@@ -400,6 +379,28 @@
     "    loss.backward()\n",
     "    optimizer.step()\n",
     "    return loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(0.3973, device='cuda:0', grad_fn=<DivBackward0>)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Test train_step\n",
+    "X, y = next(iter(train_loader))\n",
+    "train_step(X, y, train_df)"
    ]
   },
   {
@@ -718,45 +719,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#@title Create Embeddings\n",
-    "def get_embeddings(model, dataloader):\n",
-    "    model.eval()\n",
-    "    embeddings = torch.tensor([])\n",
-    "    \n",
-    "    for idx, batch in tqdm(enumerate(dataloader), total=len(dataloader)):\n",
-    "        imgs, batch_labels = batch\n",
-    "        batch_embeddings = model(imgs.to(device)).detach()\n",
-    "        \n",
-    "        if not embeddings.numel():\n",
-    "            embeddings = batch_embeddings\n",
-    "            labels = batch_labels\n",
-    "        else:\n",
-    "            embeddings = torch.cat([embeddings, batch_embeddings])\n",
-    "            labels = torch.cat([labels, batch_labels])\n",
-    "        \n",
-    "        del batch_embeddings, batch_labels\n",
-    "    \n",
-    "    return embeddings.cpu(), labels.cpu()\n",
-    "                           \n",
-    "def get_embeddings_and_file_names(model, data_loader, embeddings_path='', labels_path='', save_tensors=True):\n",
-    "    if not os.path.exists(embeddings_path) or not os.path.exists(labels_path):\n",
-    "        embeddings, labels = get_embeddings(model, data_loader)\n",
-    "        if save_tensors:\n",
-    "            torch.save(embeddings, embeddings_path)\n",
-    "            torch.save(labels, labels_path)\n",
-    "    else:\n",
-    "        embeddings = torch.load(embeddings_path).cpu()\n",
-    "        labels = torch.load(labels_path).cpu()\n",
-    "            \n",
-    "    return embeddings, labels"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 33,
    "metadata": {},
    "outputs": [
@@ -840,13 +802,6 @@
     "\n",
     "print(f'Pre-trained model: Accuracy = {score}.')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
